initialize file progress

--- a/toolkit.html
+++ b/toolkit.html
@@ -218,7 +218,7 @@
             <img src="box-512.png">
         </div>
         <div>
-            <h2>Keynote</h2>
+            <h2>Box</h2>
             <p>Where you are put your stuff in Dropbox and get it from your computers, phones, or tablets. Edit docs, automatically add photos and show off videos, from anywhere. Share with confidence, share photos with friends. work with your team like you're using a single computer Everything</p>
         </div>
         </div>
